--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
        />
     <ImageView
-        android:id="@+id/imageViewOneGuitar"
+        android:id="@+id/goodsImageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
