--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -178,6 +178,7 @@
         android:background="@color/colorPrimaryDark"
         android:text="@string/add_to_cart"
         android:textColor="@android:color/white"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:onClick="addToCart"/>
 
 </LinearLayout>
